# business-template

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: CLAUDE.md  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_create_users_and_sessions.py  0003_plan4_rbac_tables_seed.py  0004_plan5_user_assign_perm.py  0005_plan6_dept_scope_value.py  0006_plan7_role_crud_perms.py  0007_plan8_audit_log.py
backend/app/: cli.py  main.py
backend/app/api/: v1.py
backend/app/cli_commands/: audit.py  rbac.py
backend/app/core/: auth.py  config.py  database.py  email.py  errors.py  form_rules.py  guards.py  pagination.py  permissions.py  redis.py  schemas.py
backend/app/modules/_template/: __init__.py  crud.py  models.py  router.py  schemas.py  service.py
backend/app/modules/audit/: __init__.py  context.py  crud.py  models.py  router.py  schemas.py  service.py  summaries.py
backend/app/modules/auth/: crud.py  models.py  router.py  schemas.py  service.py
backend/app/modules/department/: CLAUDE.md  crud.py  models.py  router.py  schemas.py  service.py
backend/app/modules/rbac/: CLAUDE.md  constants.py  (+6 more)
backend/scripts/: init-multiple-dbs.sh
backend/templates/email/: password_reset.html
backend/tests/: conftest.py  test_primitives_integration.py
backend/tests/cli/: conftest.py  test_rbac_cli.py
backend/tests/core/: test_core_auth.py  test_database.py  test_email.py  test_errors.py  test_form_rules.py  test_guards.py  test_guards_last_of_kind.py  test_guards_self_protection.py  test_pagination.py  test_permissions.py  test_redis.py  test_schemas.py
backend/tests/migrations/: test_0005_migration.py  test_0006_migration.py  test_0007_migration.py  test_rbac_seed.py
backend/tests/scripts/: test_audit_schema_db_consistency.py  test_audit_scope.py
(+222 files in other folders)
